--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ VITE_SUPABASE_URL="https://aeenrdnrcfskooqzlmla.supabase.co"
 VITE_TON_NETWORK=testnet
 VITE_GACHA_CONTRACT_ADDR=EQCvH5PpwmWu0dqzS3Zb8joTcwolcrCd5lxQiIlQZKJI_Lu7
 VITE_TELEGRAM_BOT_TOKEN=8061583959:AAFCVsFXKKWAyrLCVHZbzPsY_sGQ1gj7v6w
+VITE_PAYMENT_MODE=redsys   # or 'stars'
+# Only needed for Redsys test
+VITE_REDSYS_TEST_TOKEN=2051251535:TEST:OTk5MDA4ODgxLTAwNQ
